--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/verus-ui.d.ts",
   "exports": {
     ".": "./dist/verus-ui.js",
-    "./style": "./dist/verus-ui.css"
+    "./css": "./dist/verus-ui.css"
   },
   "description": "Vue3 Component Library",
   "keywords": [
@@ -22,9 +22,11 @@
     "build": "vue-tsc -b && vite build",
     "build-only": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
+    "format": "prettier --write src",
     "component": "node scripts/component.js",
-    "comp": "node scripts/component.js"
+    "comp": "node scripts/component.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -32,7 +34,15 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3.2.4",
     "@iconify/tailwind": "^1.2.0",
+    "@storybook/addon-essentials": "8.5.3",
+    "@storybook/addon-interactions": "8.5.3",
+    "@storybook/addon-onboarding": "8.5.3",
+    "@storybook/blocks": "8.5.3",
+    "@storybook/test": "8.5.3",
+    "@storybook/vue3": "8.5.3",
+    "@storybook/vue3-vite": "8.5.3",
     "@tailwindcss/vite": "^4.0.4",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -40,7 +50,9 @@
     "@vue/tsconfig": "^0.7.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "storybook": "8.5.3",
     "tailwindcss": "^4.0.4",
+    "terser": "^5.38.1",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.0",
