--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.4",
+    "@iconify-json/fluent": "^1.2.13",
+    "@iconify-json/line-md": "^1.2.5",
+    "@iconify-json/svg-spinners": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
     "@storybook/addon-essentials": "8.5.3",
     "@storybook/addon-interactions": "8.5.3",
