--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@iconify-json/line-md": "^1.2.5",
     "@iconify-json/svg-spinners": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
+    "@storybook/addon-a11y": "8.5.3",
     "@storybook/addon-essentials": "8.5.3",
     "@storybook/addon-interactions": "8.5.3",
     "@storybook/addon-onboarding": "8.5.3",
