--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@chromatic-com/storybook": "3.2.4",
     "@iconify-json/fluent": "^1.2.13",
     "@iconify-json/line-md": "^1.2.5",
+    "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/svg-spinners": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
     "@storybook/addon-a11y": "8.5.3",
