chore: update deps

--- a/package.json
+++ b/package.json
@@ -44,29 +44,31 @@
     "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/svg-spinners": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
-    "@storybook/addon-a11y": "8.5.3",
-    "@storybook/addon-essentials": "8.5.3",
-    "@storybook/addon-interactions": "8.5.3",
-    "@storybook/addon-onboarding": "8.5.3",
+    "@storybook/addon-a11y": "^8.5.6",
+    "@storybook/addon-essentials": "^8.5.6",
+    "@storybook/addon-interactions": "^8.5.6",
+    "@storybook/addon-onboarding": "^8.5.6",
     "@storybook/addon-themes": "^8.5.6",
-    "@storybook/blocks": "8.5.3",
-    "@storybook/test": "8.5.3",
-    "@storybook/vue3": "8.5.3",
-    "@storybook/vue3-vite": "8.5.3",
+    "@storybook/blocks": "^8.5.6",
+    "@storybook/test": "^8.5.6",
+    "@storybook/vue3": "^8.5.6",
+    "@storybook/vue3-vite": "^8.5.6",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/tsconfig": "^0.7.0",
+    "mockjs": "^1.1.0",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "8.5.3",
+    "storybook": "^8.5.6",
     "tailwindcss": "^4.0.6",
     "terser": "^5.39.0",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.2"
   },
-  "packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
