--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verus-ui",
-  "version": "0.15.0-alpha.0",
+  "version": "0.15.0-beta.0",
   "type": "module",
   "files": [
     "dist"
