--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/verus-ui.d.ts",
   "exports": {
     ".": "./dist/verus-ui.js",
-    "./css": "./dist/verus-ui.css"
+    "./style.css": "./dist/verus-ui.css"
   },
   "license": "MIT",
   "description": "Vue3 Component Library",
@@ -38,38 +38,38 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3.2.4",
-    "@iconify-json/fluent": "^1.2.14",
+    "@chromatic-com/storybook": "^3.2.5",
+    "@iconify-json/fluent": "^1.2.15",
     "@iconify-json/line-md": "^1.2.5",
     "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/svg-spinners": "^1.2.2",
     "@iconify/tailwind": "^1.2.0",
-    "@storybook/addon-a11y": "^8.6.0",
-    "@storybook/addon-essentials": "^8.6.0",
-    "@storybook/addon-interactions": "^8.6.0",
-    "@storybook/addon-onboarding": "^8.6.0",
-    "@storybook/addon-themes": "^8.6.0",
-    "@storybook/blocks": "^8.6.0",
-    "@storybook/test": "^8.6.0",
-    "@storybook/vue3": "^8.6.0",
-    "@storybook/vue3-vite": "^8.6.0",
-    "@tailwindcss/vite": "^4.0.9",
+    "@storybook/addon-a11y": "^8.6.4",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-interactions": "^8.6.4",
+    "@storybook/addon-onboarding": "^8.6.4",
+    "@storybook/addon-themes": "^8.6.4",
+    "@storybook/blocks": "^8.6.4",
+    "@storybook/test": "^8.6.4",
+    "@storybook/vue3": "^8.6.4",
+    "@storybook/vue3-vite": "^8.6.4",
+    "@tailwindcss/vite": "^4.0.11",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/tsconfig": "^0.7.0",
     "mm2r": "^0.2.0",
     "mockjs": "^1.1.0",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.6.0",
-    "tailwindcss": "^4.0.9",
+    "storybook": "^8.6.4",
+    "tailwindcss": "^4.0.11",
     "terser": "^5.39.0",
     "typescript": "~5.7.3",
     "vite": "^6.2.0",
-    "vite-plugin-dts": "^4.5.0",
-    "vue-tsc": "^2.2.4"
+    "vite-plugin-dts": "^4.5.3",
+    "vue-tsc": "^2.2.8"
   },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
+  "packageManager": "pnpm@10.6.0+sha512.df0136e797db0cfa7ec1084e77f3bdf81bacbae9066832fbf95cba4c2140ad05e64f316cde51ce3f99ea00a91ffc702d6aedd3c0f450f895e3e7c052fe573cd8"
 }
