refactor: update types & styles

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,7 @@
     "jsxImportSource": "vue",
     "noImplicitThis": true,
     "strict": true,
-    "verbatimModuleSyntax": true,
+    "preserveConstEnums": false,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "esModuleInterop": true,
