--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "url": "git+https://github.com/chenrui1124/verus-ui.git"
   },
   "scripts": {
+    "type-check": "vue-tsc --build",
     "build": "vue-tsc -b && vite build",
     "build-only": "vite build",
     "preview": "vite preview",
     "format": "prettier --write src",
-    "component": "node scripts/component.js",
     "comp": "node scripts/component.js",
+    "component": "node scripts/component.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -38,38 +39,38 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.5",
-    "@iconify-json/fluent": "^1.2.15",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@iconify-json/fluent": "^1.2.16",
     "@iconify-json/line-md": "^1.2.5",
     "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/svg-spinners": "^1.2.2",
-    "@iconify/tailwind": "^1.2.0",
-    "@storybook/addon-a11y": "^8.6.4",
-    "@storybook/addon-essentials": "^8.6.4",
-    "@storybook/addon-interactions": "^8.6.4",
-    "@storybook/addon-onboarding": "^8.6.4",
-    "@storybook/addon-themes": "^8.6.4",
-    "@storybook/blocks": "^8.6.4",
-    "@storybook/test": "^8.6.4",
-    "@storybook/vue3": "^8.6.4",
-    "@storybook/vue3-vite": "^8.6.4",
-    "@tailwindcss/vite": "^4.0.11",
+    "@iconify/tailwind4": "^1.0.6",
+    "@storybook/addon-a11y": "^8.6.7",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7",
+    "@storybook/addon-onboarding": "^8.6.7",
+    "@storybook/addon-themes": "^8.6.7",
+    "@storybook/blocks": "^8.6.7",
+    "@storybook/test": "^8.6.7",
+    "@storybook/vue3": "^8.6.7",
+    "@storybook/vue3-vite": "^8.6.7",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^22.13.9",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@types/node": "^22.13.11",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/tsconfig": "^0.7.0",
     "mm2r": "^0.2.0",
     "mockjs": "^1.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.6.4",
-    "tailwindcss": "^4.0.11",
+    "storybook": "^8.6.7",
+    "tailwindcss": "^4.0.15",
     "terser": "^5.39.0",
     "typescript": "~5.7.3",
-    "vite": "^6.2.0",
+    "vite": "^6.2.2",
     "vite-plugin-dts": "^4.5.3",
     "vue-tsc": "^2.2.8"
   },
-  "packageManager": "pnpm@10.6.0+sha512.df0136e797db0cfa7ec1084e77f3bdf81bacbae9066832fbf95cba4c2140ad05e64f316cde51ce3f99ea00a91ffc702d6aedd3c0f450f895e3e7c052fe573cd8"
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
